fix [#30493] GE crashes on exit because of using freed mtfaces from tessfaces

prevent gpu_draw.c holding a pointer to a freed array.